# rm_auto_aim

./: .gitignore
armor_detector/: CMakeLists.txt
armor_detector/include/armor_detector/: armor_pose_estimator.hpp  ba_solver.hpp  graph_optimizer.hpp  types.hpp
armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp  armor_pose_estimator.cpp  ba_solver.cpp  graph_optimizer.cpp
armor_detector/test/: node.cpp
armor_solver/: CMakeLists.txt  package.xml
armor_solver/executor/: executor.cpp  global_node_map.hpp  register_node_macro.h  shared_memory.cpp
armor_solver/executor/factory/: factory_init_shut.h  load_node_factory.h  load_static_node_factory.h
armor_solver/include/armor_solver/: armor_solver_common.h  armor_solver_node.h
armor_solver/include/armor_solver/gimbal_controller/: controller.h  controller_tools.h  planner.hpp  sg_filter.hpp  target_adviser.h  target_predictor.hpp
armor_solver/include/armor_solver/kalman_pool/: common.h  extended_kalman_filter.hpp  kalman_pool.h  object_base.h  observer.hpp  outpost.h  robot.h
armor_solver/include/armor_solver/kalman_pool/motion_model/: fix_top.h  motion_factory.h  moving_top.h  translate.h
armor_solver/src/: armor_solver_node.cpp
armor_solver/src/gimbal_controller/: controller.cpp  controller.cpp.back  controller_tools.cpp  planner.cpp  target_adviser.cpp  target_predictor.cpp
armor_solver/src/kalman_pool/: kalman_pool.cpp  object_base.cpp  observer.cpp  outpost.cpp  robot.cpp
armor_solver/src/kalman_pool/motion_model/: fix_top.cpp  motion_factory.cpp  moving_top.cpp  translate.cpp
armor_solver/submodule/clock/: CMakeLists.txt
armor_solver/submodule/clock/include/clock/: clock.h
armor_solver/submodule/clock/src/: clock.cpp
armor_solver/submodule/cmake/: Function.cmake  GenerateHeader.cmake
armor_solver/submodule/data_center/: CMakeLists.txt
armor_solver/submodule/data_center/include/: DataCenterCommon
armor_solver/submodule/data_center/include/data_center/: data_recorder.h
armor_solver/submodule/data_center/include/data_center/listener/: ros_listener.h
armor_solver/submodule/data_center/src/: data_recorder.cpp
armor_solver/submodule/data_center/src/listener/: ros_listener.cpp
armor_solver/submodule/parameter/: CMakeLists.txt
armor_solver/submodule/parameter/include/parameter/: parameter.h
armor_solver/submodule/parameter/src/: parameter.cpp
armor_solver/submodule/visualization/: CMakeLists.txt
armor_solver/submodule/visualization/include/visualization/: preset.h  visualization.h
armor_solver/submodule/visualization/src/: visualization.cpp
rm_auto_aim/: package.xml
rm_interfaces/: CMakeLists.txt
rm_interfaces/msg/: Armor.msg  DebugBack.msg  GimbalCmd.msg  Target.msg
rm_utils/: CMakeLists.txt
rm_utils/include/rm_utils/: common.hpp
rm_utils/include/rm_utils/math/: extended_kalman_filter.hpp  kalman_filter.hpp  manual_compensator.hpp  omni_kalman_filter.hpp  pnp_solver.hpp  trajectory_compensator.hpp
rm_utils/src/math/: kalman_filter.cpp  pnp_solver.cpp  trajectory_compensator.cpp
